syntax = "proto3";

option csharp_namespace = "OrderManagement.Application.SignGrpc";

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package SignGrpcService;

service SignGrpcService{
	rpc CreateSign(CreateSignGrpcInput) returns (CreateSignGrpcOutput);
	
}
message CreateSignGrpcInput{
	string Title = 1;
	string Description = 2;
	string DocumentName = 3;
	string DocumentData = 4;
	string RecipientUsername = 5;
	string DocumentParameter = 6;
}
message CreateSignGrpcOutput{
	string Message = 1;
	int32 ResultCode = 2;
	bool Success = 3;
	string ResponseBody = 4;
}




